# fullstack-notifications

./: README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/backend/: README.md  test.py
backend/backend/backend/: asgi.py  authentication.py  settings.py  urls.py
backend/backend/customauth/: wrappers.py
backend/backend/invalidation/: __init__.py  apps.py  consts.py  consumers.py  emitter.py  urls.py
backend/backend/notifications/: admin.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/notifications/migrations/: 0001_initial.py
backend/backend/notifications/services/: notification.py
frontend/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/entities/: types.ts
frontend/src/features/auth/: authSlice.ts  profile-card.tsx  signin-card.tsx  signin-form.tsx  signup-card.tsx  signup-form.tsx  types.ts
frontend/src/features/notification/: create-notification-card.tsx  create-notification-form.tsx  notifications-card.tsx  types.ts
frontend/src/shared/constants/: routes.ts
frontend/src/shared/lib/: auth.ts  config.ts  index.ts  jwt.ts  request.ts  routes.ts
frontend/src/shared/redux/: index.ts  store.ts
frontend/src/widgets/: dashboard.tsx
frontend/src/widgets/auth/: signin.tsx  signout.tsx  signup.tsx
(+10 files in other folders)
