[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Kirill Zhosul <kirillzhosul@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
